--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,5 +52,14 @@ dependencies {
     implementation 'com.google.android.gms:play-services-plus:17.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
+    implementation('com.squareup.retrofit2:retrofit:2.3.0')
+            {
+                exclude module: 'okhttp'
+            }
+
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+
 }
 apply plugin: 'com.google.gms.google-services'
