--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'com.android.support:appcompat-v7:29.+'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -48,11 +50,13 @@ dependencies {
     implementation 'com.google.android.libraries.places:places:2.2.0'
     implementation 'com.google.android.gms:play-services-places:17.0.0'
 
+    implementation 'com.google.android.gms:play-services-location:17.1.0'
+
     implementation 'com.google.maps.android:android-maps-utils:0.5'
     implementation 'com.google.android.gms:play-services-plus:17.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
-    implementation('com.squareup.retrofit2:retrofit:2.3.0')
+    implementation('com.squareup.retrofit2:retrofit:2.9.0')
             {
                 exclude module: 'okhttp'
             }
@@ -60,6 +64,12 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
     implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
+
+//    text recognition
+    implementation 'com.google.firebase:firebase-analytics:18.0.0'
+    implementation 'com.google.firebase:firebase-ml-vision:24.0.3'
+    implementation 'com.google.firebase:firebase-core:18.0.0'
+//    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:16.1.1'
 
 }
 apply plugin: 'com.google.gms.google-services'
